fix some layout problems

--- a/app/assets/stylesheets/additional.css
+++ b/app/assets/stylesheets/additional.css
@@ -19,14 +19,14 @@ body {
 
 .container-fluid > .content {
     margin-left: -23px;
-    margin-right: 250px;
+    margin-right: 200px;
     background-color: white;
 }
 
 .container-fluid > .sidebar {
     float: right;
     position: relative;
-    width: 240px;
+    width: 190px;
     background-color: #E7F6F9;
 }
 
